## Process this file with automake to produce Makefile.in

SUBDIRS = src data

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
                       config.h.in config.sub configure install-sh \
		       ltconfig ltmain.sh missing mkinstalldirs \
		       stamp-h.in debian/changelog

EXTRA_DIST = README AUTHORS COPYING TODO NEWS \
		debian/changelog debian/changelog.in \
		debian/rules debian/control debian/copyright \
		debian/docs
